fixed z-indexes

--- a/_sass/_cta.sass
+++ b/_sass/_cta.sass
@@ -4,6 +4,7 @@
   padding: 0 5% ms(4)
   text-align: center
   position: relative
+  z-index: 2
 
   p
     text-align: center
