--- a/_sass/_ethics.sass
+++ b/_sass/_ethics.sass
@@ -1,3 +1,6 @@
+#ethics-section
+  z-index: 2
+
 #charities,
 #social-responsibility,
 #honesty,
