--- a/_sass/_footer.sass
+++ b/_sass/_footer.sass
@@ -9,6 +9,7 @@ footer[role="contentinfo"]
   position: relative
   margin-top: -1px
   border-bottom: 0.125rem solid $brand
+  z-index: 2
 
   @include small
     padding: ms(-1) ms(3) ms(-1)
