--- a/_sass/_hero.sass
+++ b/_sass/_hero.sass
@@ -42,6 +42,7 @@
   background-position: center
   background-size: cover
   background-attachment: fixed
+  z-index: 2
 
   .feature-section__header,
   .feature-section__content
